# SUF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all_milestones.md  bench.md  benchmark_report.md  expand.md  expand1.md  initial.md  milestone11_gpu.md  milestone4.md  paper.md  revise_m11.md  sim_harness  super.md
bench/: accuracy_bench.py  accuracy_compare.py  hardware_iZgw88ebelsx9bnumltp3tZ.json  run_sigma_vs_suf.py
bench/configs/: accuracy_table4.json  accuracy_table4_example.json  sigma_vs_suf.json  sigma_vs_suf_bert_base.json  sigma_vs_suf_bert_tiny.json  sigma_vs_suf_current.json  sigma_vs_suf_current_gpu.json  sigma_vs_suf_current_gpu_2025-12-20.json  sigma_vs_suf_current_gpu_2025-12-20_beavergpu.json  sigma_vs_suf_current_gpu_2025-12-20_beavergpu_devpack.json  sigma_vs_suf_current_gpu_2025-12-20_beavergpu_ompbeaver.json  sigma_vs_suf_current_gpu_2025-12-20_intervallut.json  sigma_vs_suf_current_gpu_2025-12-20_openpackstream.json  sigma_vs_suf_current_gpu_2025-12-20_prefillfix.json  sigma_vs_suf_current_gpu_2025-12-20_prefillfix_gpu_kernels.json  sigma_vs_suf_gpt2.json  sigma_vs_suf_gpu_fastpaths_2025-12-20.json  sigma_vs_suf_gpu_fastpaths_no_devout_2025-12-20.json  sigma_vs_suf_gpu_fastpaths_nopipeline_2025-12-20.json  sigma_vs_suf_large.json  sigma_vs_suf_large_opt.json  sigma_vs_suf_llama2_7b.json  sigma_vs_suf_openreserve_beaverpack.json  sigma_vs_suf_pfssfinal.json  sigma_vs_suf_quick_gpu.json  sigma_vs_suf_scatterless.json  sigma_vs_suf_xsvecfix.json
build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bench_gemm_overlap  cmake_install.cmake  test_cuda_pack_effbits  test_cuda_packed_pfss  test_cuda_pred_mask  test_cuda_prg  test_cuda_trunc_gapars  test_layernorm_task  test_pfss_gpu  test_planner_causal  test_softmax_gpu_smoke  test_staged_softmax  test_trunc_task
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  bench_attention  bench_gemm  bench_gemm_overlap  bench_llm_gates  bench_pfss_cpu_gpu  bench_sigmafast_coeff  bench_sigmafast_gates  bench_sigmafast_pred  bench_softmax_norm  bench_suf_transformer  bench_truncation  build.ninja  cmake_install.cmake  sim_harness  test_compile_pfss  test_composite_equiv_proto  test_composite_equiv_proto_myl7  test_composite_equiv_proto_sigmafast  test_composite_runtime  test_cuda_beaver_mul  test_cuda_horner_cubic  test_cuda_pack_effbits  test_cuda_packed_pfss  test_cuda_pred_mask  test_cuda_prg  test_cuda_recip_task  test_cuda_trunc_gapars  test_cuda_trunc_postproc  test_gapars_selector  test_layernorm_task  test_llm_gates  test_mask_rewrite  test_matmul  test_matmul_and_attention  test_myl7_bit_order  test_pfss_async  (+18 more)
cuda/: cuda_primitives.cu  pfss_backend_gpu.cu  pfss_backend_stub.cpp  pfss_cuda_api.hpp  pfss_kernels.cu  pfss_stub.cpp  poly_kernels.cu
docs/: benchmark_sigma_vs_suf.md  milestone11_gpu.md  milestone_acceptance.md  milestone_task_audit.md
docs/pfss_superbatch_gates/: README.md
include/compiler/: compiled_suf_gate.hpp  layer_graph.hpp  mask_rewrite.hpp  matmul_truncation.hpp  passes.hpp  pfss_program_desc.hpp  range_analysis.hpp  range_propagation.hpp  rescale_ir.hpp  rescale_pass.hpp  suf_collect.hpp  suf_to_pfss.hpp  truncation_lowering.hpp  truncation_pass.hpp  truncation_pass_runner.hpp  utils.hpp
include/core/: ring.hpp  serialization.hpp  types.hpp
include/gates/: ars_faithful_gate.hpp  bool_dag_xor.hpp  composite_fss.hpp  gapars_gate.hpp  gate_api.hpp  gelu_composite.hpp  gelu_spline_gate.hpp  layernorm_block.hpp  nexp_composite.hpp  nexp_gate.hpp  piecewise_poly.hpp  postproc_hooks.hpp  pred_view.hpp  reciprocal_composite.hpp  reciprocal_gate.hpp  relu_gate.hpp  reluars_gate.hpp  rsqrt_gate.hpp  silu_composite.hpp  silu_spline_gate.hpp  softmax_block.hpp  softmax_composite.hpp  trunc_faithful_gate.hpp
include/hash-library/: sha256.cpp
include/mpc/: arithmetic_mpc.hpp  beaver.hpp  boolean_mpc.hpp  local_chan.hpp  masked_wire.hpp  net.hpp  shares.hpp
include/nn/: attention_block.hpp  kv_cache.hpp  layer_context.hpp  layernorm_graph.hpp  linops.hpp  matmul_beaver.hpp  matmul_gpu.hpp  matmul_publicW.hpp  mlp_block.hpp  model_specs.hpp  row_maxdiff_task.hpp  softmax_block_task.hpp  softmax_block_task_staged.hpp  tensor_view.hpp  transformer_layer.hpp
include/pfss/: backend_cleartext.hpp  backend_external_adapter.hpp  pfss.hpp  program_desc.hpp
include/proto/: backend_clear.hpp  backend_factory.hpp  backend_gpu.hpp  beaver.hpp  beaver_mul64.hpp  bit_ring_ops.hpp  channel.hpp  common.hpp  effbits_packing.hpp  gelu_batch_step_dcf.hpp  gelu_online_interval_lut.hpp  gelu_online_step_dcf.hpp  gelu_spline_dealer.hpp  grotto_backend.hpp  myl7_fss_backend.hpp  pack_utils.hpp  packed_backend.hpp  pfss_backend.hpp  pfss_backend_batch.hpp  pfss_interval_lut_ext.hpp  pfss_utils.hpp  reference_backend.hpp  reluars_dealer.hpp  reluars_online_complete.hpp  secure_rand.hpp  sigma_fast_backend_ext.hpp  tape.hpp
include/runtime/: bench_accounting.hpp  bench_key_cost.hpp  bench_online_profile.hpp  cuda_primitives.hpp  matmul_task.hpp  open_collector.hpp  pfss_async_runner.hpp  pfss_gpu_staging.hpp  pfss_phase_planner.hpp  pfss_superbatch.hpp  phase_executor.hpp  phase_tasks.hpp  staged_executor.hpp
include/suf/: bool_expr.hpp  fixedpoint.hpp  mask_rewrite.hpp  mask_rewrite_eval.hpp  polynomial.hpp  predicates.hpp  ref_eval.hpp  suf_gelu_builders.hpp  suf_ir.hpp  suf_silu_builders.hpp  trunc_suf_builders.hpp  validate.hpp
include/uint256_t/: uint256_t.hpp
scripts/: build_sigma.sh  describe_hardware.py
scripts/patches/: sigma_gpu_mpc.patch  sigma_sci_cleartext.patch  sigma_seal.patch
src/bench/: bench_accuracy_primitives.cpp  bench_attention.cpp  bench_gemm.cpp  bench_gemm_overlap.cpp  bench_layer_breakdown.cpp  bench_llm_gates.cpp  bench_pfss_cpu_gpu.cpp  bench_sigmafast_coeff.cpp  bench_sigmafast_gates.cpp  bench_sigmafast_pred.cpp  bench_softmax_norm.cpp  bench_truncation.cpp
src/compiler/: layer_graph.cpp  rescale_pass.cpp  suf_to_pfss.cpp  truncation_pass.cpp
src/demo/: bench_suf_transformer.cpp  demo_gelu.cpp  demo_proto_endtoend.cpp  (+53 more)
(+22 files in other folders)
